<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    android:clickable="true"
    android:focusable="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_now_playing" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="false"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/titleTextView"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:listitem="@layout/list_item_artwork" />

    <include
        android:id="@+id/lyricsView"
        layout="@layout/view_lyrics"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/recyclerView"
        app:layout_constraintEnd_toEndOf="@id/recyclerView"
        app:layout_constraintStart_toStartOf="@id/recyclerView"
        app:layout_constraintTop_toTopOf="@id/recyclerView"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingStart="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="16dp"
        android:paddingBottom="4dp"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/albumTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Lateralus" />

    <TextView
        android:id="@+id/albumTextView"
        style="@style/TextSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="16dp"
        android:paddingBottom="4dp"
        android:textSize="16sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/artistTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        tools:text="Lateralus" />

    <TextView
        android:id="@+id/artistTextView"
        style="@style/TextSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="16dp"
        android:paddingBottom="4dp"
        android:textSize="16sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumTextView"
        tools:text="Tool" />

    <TextView
        android:id="@+id/currentTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBar"
        tools:text="2:09" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:max="1000"
        app:layout_constraintBottom_toTopOf="@+id/playPauseButton"
        app:layout_constraintEnd_toStartOf="@+id/durationTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/currentTimeTextView"
        app:layout_constraintTop_toBottomOf="@+id/artistTextView" />

    <TextView
        android:id="@+id/durationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBar"
        tools:text="4:31" />

    <com.simplecityapps.shuttle.ui.common.view.ShuffleButton
        android:id="@+id/shuffleButton"
        style="@style/Widget.Shuttle.ImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/button_content_description_shuffle"
        app:layout_constraintBottom_toBottomOf="@+id/skipPrevContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/skipPrevContainer" />

    <FrameLayout
        android:id="@+id/skipPrevContainer"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/playPauseButton"
        app:layout_constraintEnd_toStartOf="@+id/playPauseButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/shuffleButton"
        app:layout_constraintTop_toTopOf="@+id/playPauseButton">

        <com.simplecityapps.shuttle.ui.common.view.SkipButton
            android:id="@+id/skipPrevButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/button_skip_previous"
            android:padding="10dp"
            app:seekAmount="15"
            app:seekDirection="backward"
            tools:visibility="visible" />

        <com.simplecityapps.shuttle.ui.common.view.SeekButton
            android:id="@+id/seekBackwardButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/button_seek_backward"
            android:padding="8dp"
            android:visibility="gone"
            app:seekAmount="10"
            app:seekDirection="backward"
            tools:visibility="gone" />

    </FrameLayout>

    <com.simplecityapps.shuttle.ui.common.view.PlayStateView
        android:id="@+id/playPauseButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/circle_filled"
        android:contentDescription="@string/button_toggle_playback"
        android:tint="?colorPlayPauseTint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/skipNextContainer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/skipPrevContainer"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <FrameLayout
        android:id="@+id/skipNextContainer"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/playPauseButton"
        app:layout_constraintEnd_toStartOf="@+id/repeatButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playPauseButton"
        app:layout_constraintTop_toTopOf="@+id/playPauseButton">

        <com.simplecityapps.shuttle.ui.common.view.SkipButton
            android:id="@+id/skipNextButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/button_skip_next"
            android:padding="10dp"
            app:seekAmount="15"
            app:seekDirection="forward"
            tools:visibility="visible" />

        <com.simplecityapps.shuttle.ui.common.view.SeekButton
            android:id="@+id/seekForwardButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/button_seek_forward"
            android:padding="8dp"
            android:visibility="gone"
            app:seekAmount="30"
            app:seekDirection="forward"
            tools:visibility="gone" />

    </FrameLayout>

    <com.simplecityapps.shuttle.ui.common.view.RepeatButton
        android:id="@+id/repeatButton"
        style="@style/Widget.Shuttle.ImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/button_repeat"
        app:layout_constraintBottom_toBottomOf="@+id/skipNextContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/skipNextContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>