<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/libraryFragment"
        android:checked="true"
        android:icon="@drawable/ic_library_music_black_24dp"
        android:title="@string/title_library" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/bottomSheetFragment"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="" />
</menu>
